--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -21,8 +21,18 @@ permissions:
   contents: read  # This is required for actions/checkout
 
 jobs:
+  env_selector:
+    runs-on: ubuntu-latest       
+    steps:
+      - id: identify_env 
+        run: if [ ${GITHUB_HEAD_REF} = "main" ];then export github_env='prod'; else export github_env=${GITHUB_HEAD_REF}; fi
+
+      outputs:
+        github_env: ${{ steps.identify_env.outputs.github_env }}
+
   build:
-    environment: ${GITHUB_HEAD_REF}
+    needs: env_selector
+    environment: ${{ needs.env_selector.outputs.github_env }}
     runs-on: ubuntu-latest       
     steps:
       - name: prod check 
